@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-15T16:07:11Z",
+  "timestamp" : "2024-01-16T00:29:46Z",
   "count_outdated" : 219,
   "uniques_outdated" : 154,
-  "count" : 226,
-  "uniques" : 161,
+  "count" : 227,
+  "uniques" : 162,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-01-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
