@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 7,
+  "count": 8,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2024-01-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
