@@ -1,3 +1,12 @@
+2024-01-16T00:29:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7535389755 # 27
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-16
+* notice: last 14d: unq all: 8 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 154 219 / 161 226
+* notice: next accum: outdated-unq outdated-all / unq all: 154 219 / 162 227
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-15]
+
 2024-01-15T16:07:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7531407105 # 26
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
